--- a/Jupyter Notebooks/Insurance_models/random_forest_regression.ipynb
+++ b/Jupyter Notebooks/Insurance_models/random_forest_regression.ipynb
@@ -770,21 +770,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Jupyter Notebook../../model.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-50dacdd08cfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmy_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Jupyter Notebook../../model.pkl'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Jupyter Notebook../../model.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Export model to file\n",
     "import pickle\n",
@@ -802,29 +790,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(age, gender, bmi, children, smoker, region):\n",
     "    user_inputs = []\n",
-    "#     age = float(input(\"How old are you? \"))\n",
     "    user_inputs.append(age)\n",
-    "#     gender = input(\"What is your gender? (male/female)\").lower()\n",
     "    user_inputs.append(gender)\n",
-    "#     bmi = input(\"What is your bmi?\")\n",
     "    user_inputs.append(bmi)\n",
-    "#     children = input(\"How many children are covered under your plan?\")\n",
     "    user_inputs.append(children)\n",
-    "#     smoker = input(\"Do you smoke? (yes/no)\")\n",
     "    user_inputs.append(smoker)\n",
-    "#     region = input(\"What region of the US do you currently live in?\")\n",
     "    user_inputs.append(region)\n",
     "    \n",
     "    predicted_value = regressor.predict(ct.transform([user_inputs]))\n",
     "    \n",
     "    return(predicted_value)\n",
     "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16970.61])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    age_input = float(input(\"How old are you? \"))\n",
+    "    gender_input = input(\"What is your gender? (male/female)\").lower()\n",
+    "    bmi_input = input(\"What is your bmi?\")\n",
+    "    children_input = input(\"How many children are covered under your plan?\")\n",
+    "    smoker_input = input(\"Do you smoke? (yes/no)\")\n",
+    "    region_input = input(\"What region of the US do you currently live in?\")\n",
+    "\n",
     "#     print(f'''The predicted value for the inputs: \n",
     "#           age: {user_inputs[0]} \n",
     "#           gender: {user_inputs[1]}\n",
@@ -832,16 +841,10 @@
     "#           number of children: {user_inputs[3]}\n",
     "#           smoker: {user_inputs[4]}\n",
     "#           region: {user_inputs[5]}\n",
-    "#           is: ${predicted_value[0]}''')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predict(22,'male',23,2,'yes','northwest')"
+    "#           is: ${predicted_value[0]}''')\n",
+    "\n",
+    "\n",
+    "predict(age_input, gender_input)"
    ]
   },
   {
